resources/part003/kubernetes_files/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: lab-hgrubbs
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx

  defaultBackend:
    service:
      name: api
      port:
        number: 8080

  rules:
    - host: "character-api.dev-westus2.aks.q5id.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api
                port:
                  number: 8080
